--- a/TESTS/voxelization_cellcenters_octree_multiprocessing.ipynb
+++ b/TESTS/voxelization_cellcenters_octree_multiprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,13 @@
     "import ifcopenshell\n",
     "from importlib import reload \n",
     "import multiprocessing\n",
+    "import ifcopenshell\n",
     "import ifcopenshell.geom\n",
     "import time\n",
     "import vtk\n",
+    "from multiprocessing import Pool\n",
+    "from tempfile import TemporaryFile\n",
+    "\n",
     "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
     "\n",
@@ -46,7 +50,7 @@
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\"]\n",
+    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\", \"IfcWindow\", \"IfcDoor\"]\n",
     "    \n",
     "    multiblock = pv.MultiBlock()\n",
     "\n",
@@ -148,15 +152,44 @@
     "    \n",
     "    return grid, mask\n",
     "\n",
-    "def voxelize(node, voxel_size, voxelized_representation, meshes):\n",
+    "def get_all_leaf_nodes(node):\n",
+    "    \"\"\"Recursively get all leaf nodes from the octree.\"\"\"\n",
     "    if node.is_leaf:\n",
-    "        if node.contains_mesh:\n",
-    "            # Perform voxelization in this region using voxelize_space function\n",
-    "            grid, mask = voxelize_space(meshes, voxel_size, node.bounds)\n",
-    "            voxelized_representation.append((grid, mask))\n",
+    "        return [node]\n",
     "    else:\n",
+    "        leaf_nodes = []\n",
     "        for child in node.children:\n",
-    "            voxelize(child, voxel_size, voxelized_representation, meshes)"
+    "            if child is not None:\n",
+    "                leaf_nodes.extend(get_all_leaf_nodes(child))\n",
+    "        return leaf_nodes\n",
+    "\n",
+    "def mesh_to_arrays(mesh):\n",
+    "    return {\n",
+    "        \"points\": mesh.points,\n",
+    "        \"faces\": mesh.faces,\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def arrays_to_mesh(data):\n",
+    "    \"\"\"Convert a dictionary of numpy arrays to a PyVista mesh.\"\"\"\n",
+    "    return pv.PolyData(data[\"points\"], data[\"faces\"])\n",
+    "\n",
+    "\n",
+    "def voxelize_node(args):\n",
+    "    node, meshes, voxel_size = args\n",
+    "    \n",
+    "    # Convert the numpy arrays back to PyVista meshes\n",
+    "    meshes = [arrays_to_mesh(*mesh) for mesh in meshes]\n",
+    "    \n",
+    "    return voxelize_space(meshes, voxel_size, node.bounds)\n",
+    "\n",
+    "def voxelize(root, voxel_size, meshes):\n",
+    "    nodes_to_voxelize = [node for node in get_all_leaf_nodes(root) if node.contains_mesh]\n",
+    "    \n",
+    "    with Pool() as pool:\n",
+    "        voxelized_representation = pool.map(voxelize_node, [(node, meshes, voxel_size) for node in nodes_to_voxelize])\n",
+    "\n",
+    "    return voxelized_representation"
    ]
   },
   {
@@ -168,21 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to convert objects: 23.8556 seconds\n"
+      "Time taken to convert objects: 3.5520 seconds\n"
      ]
     }
    ],
    "source": [
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
     "\n",
     "# convert IFC objects into vtk meshes\n",
     "start_time = time.time()\n",
@@ -202,47 +235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of voxels: 422940\n",
-      "Time taken to voxelize: 344.9391 seconds\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fee61abfce4a4de28edf84ba734abdc5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:58998/index.html?ui=P_0x181bdb02aa0_1&reconnect=auto' style='width…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "\n",
     "# Create the octree\n",
     "bounds = all_meshes.bounds # You'll need to determine these based on your data\n",
-    "max_levels = 3 # Adjust based on your needs\n",
+    "max_levels = 8 # Adjust based on your needs\n",
     "octree = Octree(bounds, max_levels)\n",
-    "#merged_polydata = reduce(lambda x, y: x + y, all_meshes)\n",
+    "\n",
     "for mesh in all_meshes:\n",
     "    insert_mesh(octree.root, mesh, octree.max_levels)\n",
     "\n",
     "# Perform the voxelization\n",
-    "voxel_size = 0.5 # Adjust based on your needs\n",
-    "voxelized_representation = []\n",
-    "voxelize(octree.root, voxel_size, voxelized_representation, all_meshes)\n",
+    "voxel_size = 0.5  # Adjust based on your needs\n",
+    "nodes_to_voxelize = [node for node in get_all_leaf_nodes(octree.root) if node.contains_mesh]\n",
+    "with Pool() as pool:\n",
+    "    voxelized_representation = pool.map(voxelize_node, [(node, [mesh_to_arrays(mesh) for mesh in all_meshes], voxel_size) for node in nodes_to_voxelize])\n",
     "\n",
     "end_time = time.time()\n",
     "print(f\"Time taken to voxelize: {end_time - start_time:.4f} seconds\")\n",
@@ -252,7 +263,7 @@
     "\n",
     "for grid, mask in voxelized_representation:\n",
     "    p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"blue\", show_edges=True, opacity=0.5)\n",
-    "p.add_mesh(grid,show_edges=True, opacity=0.3)\n",
+    "\n",
     "p.show()\n"
    ]
   },
