--- a/voxelization_cellcenters.ipynb
+++ b/voxelization_cellcenters.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
     "import time\n",
     "from functools import reduce\n",
     "import vtk\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
     "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to convert objects: 3.9078 seconds\n"
+      "Time taken to convert objects: 0.2380 seconds\n"
      ]
     }
    ],
@@ -152,26 +152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of voxels: 2028516\n",
-      "Time taken to voxelize: 118.8157 seconds\n"
+      "Total number of voxels: 10944\n",
+      "Time taken to voxelize: 0.0656 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bba404a478f461bb34eefa3b2dbc114",
+       "model_id": "02cb15a1a7ff4e879d4f4804ade4c487",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:51612/index.html?ui=P_0x1f5befadb40_24&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:54680/index.html?ui=P_0x2749863bd60_0&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -180,7 +180,7 @@
    ],
    "source": [
     "# Voxelize the entire space and check for intersections with the meshes\n",
-    "voxel_size = 0.1\n",
+    "voxel_size = 0.2\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
