--- a/voxelization_cellcenters_octree_multithreading.ipynb
+++ b/voxelization_cellcenters_octree_multithreading.ipynb
@@ -16,19 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyvista as pv\n",
     "import numpy as np\n",
     "from typing import Any, Tuple\n",
-    "import ifcopenshell\n",
     "from importlib import reload \n",
     "import multiprocessing\n",
+    "import ifcopenshell\n",
     "import ifcopenshell.geom\n",
     "import time\n",
     "import vtk\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "\n",
     "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
     "\n",
@@ -46,7 +48,7 @@
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\"]\n",
+    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\", \"IfcWindow\", \"IfcDoor\"]\n",
     "    \n",
     "    multiblock = pv.MultiBlock()\n",
     "\n",
@@ -155,8 +157,10 @@
     "            grid, mask = voxelize_space(meshes, voxel_size, node.bounds)\n",
     "            voxelized_representation.append((grid, mask))\n",
     "    else:\n",
-    "        for child in node.children:\n",
-    "            voxelize(child, voxel_size, voxelized_representation, meshes)"
+    "        with ThreadPoolExecutor() as executor:\n",
+    "            futures = [executor.submit(voxelize, child, voxel_size, voxelized_representation, meshes) for child in node.children]\n",
+    "            for future in futures:\n",
+    "                future.result()\n"
    ]
   },
   {
@@ -168,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to convert objects: 23.8556 seconds\n"
+      "Time taken to convert objects: 27.2443 seconds\n"
      ]
     }
    ],
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -210,18 +214,18 @@
      "output_type": "stream",
      "text": [
       "Total number of voxels: 422940\n",
-      "Time taken to voxelize: 344.9391 seconds\n"
+      "Time taken to voxelize: 282.9198 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fee61abfce4a4de28edf84ba734abdc5",
+       "model_id": "eb9c634d49dd491887516e5ee5fc1d62",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:58998/index.html?ui=P_0x181bdb02aa0_1&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:58161/index.html?ui=P_0x201f7bcee00_4&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -235,12 +239,13 @@
     "bounds = all_meshes.bounds # You'll need to determine these based on your data\n",
     "max_levels = 3 # Adjust based on your needs\n",
     "octree = Octree(bounds, max_levels)\n",
+    "\n",
     "#merged_polydata = reduce(lambda x, y: x + y, all_meshes)\n",
     "for mesh in all_meshes:\n",
     "    insert_mesh(octree.root, mesh, octree.max_levels)\n",
     "\n",
     "# Perform the voxelization\n",
-    "voxel_size = 0.5 # Adjust based on your needs\n",
+    "voxel_size = 0.5  # Adjust based on your needs\n",
     "voxelized_representation = []\n",
     "voxelize(octree.root, voxel_size, voxelized_representation, all_meshes)\n",
     "\n",
@@ -253,6 +258,7 @@
     "for grid, mask in voxelized_representation:\n",
     "    p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"blue\", show_edges=True, opacity=0.5)\n",
     "p.add_mesh(grid,show_edges=True, opacity=0.3)\n",
+    "\n",
     "p.show()\n"
    ]
   },
