--- a/voxelization_cellcenters_octree_multithreading_filling.ipynb
+++ b/voxelization_cellcenters_octree_multithreading_filling.ipynb
@@ -16,19 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyvista as pv\n",
     "import numpy as np\n",
     "from typing import Any, Tuple\n",
-    "import ifcopenshell\n",
     "from importlib import reload \n",
     "import multiprocessing\n",
+    "import ifcopenshell\n",
     "import ifcopenshell.geom\n",
     "import time\n",
     "import vtk\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
     "\n",
@@ -46,7 +47,7 @@
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\"]\n",
+    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\", \"IfcWindow\", \"IfcDoor\"]\n",
     "    \n",
     "    multiblock = pv.MultiBlock()\n",
     "\n",
@@ -119,6 +120,55 @@
     "            if object_intersects_node(child, mesh):\n",
     "                insert_mesh(child, mesh, max_levels)\n",
     "\n",
+    "def get_neighbors(voxel_grid, current_voxel):\n",
+    "    # Implement this function to get the neighbors of the current voxel in the voxel grid\n",
+    "    neighbors = []\n",
+    "    x, y, z = current_voxel\n",
+    "    for dx in [-1, 0, 1]:\n",
+    "        for dy in [-1, 0, 1]:\n",
+    "            for dz in [-1, 0, 1]:\n",
+    "                if dx == dy == dz == 0:\n",
+    "                    continue\n",
+    "                if 0 <= x+dx < voxel_grid.shape[0] and 0 <= y+dy < voxel_grid.shape[1] and 0 <= z+dz < voxel_grid.shape[2]:\n",
+    "                    neighbors.append((x+dx, y+dy, z+dz))\n",
+    "    return neighbors\n",
+    "\n",
+    "def recursive_traversal(voxel_grid, current_voxel, visited):\n",
+    "    stack = [current_voxel]\n",
+    "    while stack:\n",
+    "        current_voxel = stack.pop()\n",
+    "        if visited[current_voxel]:\n",
+    "            continue\n",
+    "        visited[current_voxel] = True\n",
+    "        stack.extend(get_neighbors(voxel_grid, current_voxel))\n",
+    "\n",
+    "    for neighbor_voxel in get_neighbors(voxel_grid, current_voxel):\n",
+    "        recursive_traversal(voxel_grid, neighbor_voxel, visited)\n",
+    "\n",
+    "def get_seed_point(voxel_grid):\n",
+    "    # Implement this function to get a seed point outside the boundary\n",
+    "    # Here, I am assuming that the point (0, 0, 0) is outside the boundary\n",
+    "    return (0, 0, 0)\n",
+    "\n",
+    "def fill_volume(voxel_grid, mask):\n",
+    "    interior_voxels = np.logical_not(mask)\n",
+    "\n",
+    "    # Get the shape of the voxel_grid\n",
+    "    grid_shape = voxel_grid.shape\n",
+    "\n",
+    "    # Get the 1D indices of the interior voxels\n",
+    "    interior_voxel_indices = np.nonzero(interior_voxels)[0]\n",
+    "\n",
+    "    # Convert the 1D indices to 3D indices\n",
+    "    interior_voxel_indices_3d = np.array(np.unravel_index(interior_voxel_indices, grid_shape)).T\n",
+    "\n",
+    "    # Fill the interior voxels with appropriate values in the 3D voxel grid\n",
+    "    for idx in interior_voxel_indices_3d:\n",
+    "        voxel_grid[tuple(idx)] = 1  # Replace with the actual value you want to use for filling\n",
+    "\n",
+    "    return voxel_grid\n",
+    "\n",
+    "\n",
     "def create_uniform_grid(bounds, voxel_size):\n",
     "    \"\"\"Create a uniform grid within the given bounds.\"\"\"\n",
     "    x = np.arange(bounds[0], bounds[1] + voxel_size, voxel_size)\n",
@@ -131,6 +181,7 @@
     "    \"\"\"Voxelize space and check intersections with given mesh.\"\"\"\n",
     "\n",
     "    grid = create_uniform_grid(bounds, voxel_size)\n",
+    "    voxel_grid = np.zeros((len(grid.x)-1, len(grid.y)-1, len(grid.z)-1), dtype=int)  # Adjusted shape to match cell centers\n",
     "\n",
     "    num_points = grid.cell_centers().n_points\n",
     "\n",
@@ -145,8 +196,12 @@
     "        select_enclosed.SetSurfaceData(mesh)\n",
     "        select_enclosed.Update()\n",
     "        mask = np.logical_or(mask, np.array([select_enclosed.IsInside(i) for i in range(num_points)]))\n",
-    "    \n",
+    "        \n",
+    "    # Fill the volume inside the voxelized boundary\n",
+    "    voxel_grid = fill_volume(voxel_grid, mask)\n",
+    "\n",
     "    return grid, mask\n",
+    "\n",
     "\n",
     "def voxelize(node, voxel_size, voxelized_representation, meshes):\n",
     "    if node.is_leaf:\n",
@@ -155,8 +210,11 @@
     "            grid, mask = voxelize_space(meshes, voxel_size, node.bounds)\n",
     "            voxelized_representation.append((grid, mask))\n",
     "    else:\n",
-    "        for child in node.children:\n",
-    "            voxelize(child, voxel_size, voxelized_representation, meshes)"
+    "        with ThreadPoolExecutor() as executor:\n",
+    "            futures = [executor.submit(voxelize, child, voxel_size, meshes) for child in node.children]\n",
+    "            for future in futures:\n",
+    "                voxelized_representation.append(future.result())\n",
+    "\n"
    ]
   },
   {
@@ -168,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to convert objects: 23.8556 seconds\n"
+      "Time taken to convert objects: 27.9845 seconds\n"
      ]
     }
    ],
@@ -202,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -210,18 +268,18 @@
      "output_type": "stream",
      "text": [
       "Total number of voxels: 422940\n",
-      "Time taken to voxelize: 344.9391 seconds\n"
+      "Time taken to voxelize: 261.5129 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fee61abfce4a4de28edf84ba734abdc5",
+       "model_id": "378dc2a9100049f4886a6b2f55a5c275",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:58998/index.html?ui=P_0x181bdb02aa0_1&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:59575/index.html?ui=P_0x11a0e4554e0_1&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -233,14 +291,15 @@
     "\n",
     "# Create the octree\n",
     "bounds = all_meshes.bounds # You'll need to determine these based on your data\n",
-    "max_levels = 3 # Adjust based on your needs\n",
+    "max_levels = 8 # Adjust based on your needs\n",
     "octree = Octree(bounds, max_levels)\n",
+    "\n",
     "#merged_polydata = reduce(lambda x, y: x + y, all_meshes)\n",
     "for mesh in all_meshes:\n",
     "    insert_mesh(octree.root, mesh, octree.max_levels)\n",
     "\n",
     "# Perform the voxelization\n",
-    "voxel_size = 0.5 # Adjust based on your needs\n",
+    "voxel_size = 0.5  # Adjust based on your needs\n",
     "voxelized_representation = []\n",
     "voxelize(octree.root, voxel_size, voxelized_representation, all_meshes)\n",
     "\n",
@@ -253,6 +312,7 @@
     "for grid, mask in voxelized_representation:\n",
     "    p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"blue\", show_edges=True, opacity=0.5)\n",
     "p.add_mesh(grid,show_edges=True, opacity=0.3)\n",
+    "\n",
     "p.show()\n"
    ]
   },
