--- a/voxelization_cellcenters.ipynb
+++ b/voxelization_cellcenters.ipynb
@@ -11,20 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intro"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import libraries and the IFC model:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Functions"
    ]
   },
@@ -45,9 +31,9 @@
     "import time\n",
     "from functools import reduce\n",
     "import vtk\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
     "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
     "\n",
@@ -180,7 +166,7 @@
    ],
    "source": [
     "# Voxelize the entire space and check for intersections with the meshes\n",
-    "voxel_size = 0.2\n",
+    "voxel_size = 0.5\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
