--- a/voxelization_cellcenters_octree_multithreading.ipynb
+++ b/voxelization_cellcenters_octree_multithreading.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,6 @@
     "import time\n",
     "import vtk\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
-    "\n",
     "\n",
     "def to_vtk_faces(faces : Tuple[tuple]) -> np.ndarray:\n",
     "\n",
@@ -48,7 +47,7 @@
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\", \"IfcWindow\", \"IfcDoor\"]\n",
+    "    exclude_list = [\"IfcSpace\", \"IfcOpeningElement\"]\n",
     "    \n",
     "    multiblock = pv.MultiBlock()\n",
     "\n",
@@ -172,21 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to convert objects: 27.2443 seconds\n"
+      "Time taken to convert objects: 31.5136 seconds\n"
      ]
     }
    ],
    "source": [
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
     "\n",
     "# convert IFC objects into vtk meshes\n",
     "start_time = time.time()\n",
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,18 +213,18 @@
      "output_type": "stream",
      "text": [
       "Total number of voxels: 422940\n",
-      "Time taken to voxelize: 282.9198 seconds\n"
+      "Time taken to voxelize: 423.1624 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb9c634d49dd491887516e5ee5fc1d62",
+       "model_id": "615f0d1fdce84249b4110c1b656c5465",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:58161/index.html?ui=P_0x201f7bcee00_4&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:50385/index.html?ui=P_0x215a31a72b0_0&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -259,7 +258,7 @@
     "    p.add_mesh(grid.extract_cells(np.where(mask)[0]), color=\"blue\", show_edges=True, opacity=0.5)\n",
     "p.add_mesh(grid,show_edges=True, opacity=0.3)\n",
     "\n",
-    "p.show()\n"
+    "p.show()"
    ]
   },
   {
