--- a/ifc_polygon-rasterization.ipynb
+++ b/ifc_polygon-rasterization.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import pyvista as pv\n",
     "import numpy as np\n",
@@ -20,30 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
+    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
     "\n",
     "\n",
-    "        \n",
     "def open3d_block_by_element(ifc_file): \n",
     "    start_time = time.time()\n",
     "    settings = ifcopenshell.geom.settings()\n",
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
     "    iterator = ifcopenshell.geom.iterator(settings, ifc_file, multiprocessing.cpu_count())\n",
-    "    exclude_list = [\"IfcOpening\", \"IfcSpace\"]\n",
+    "    include_list = [\"IfcWall\", \"IfcSlab\", \"IfcBeam\", \"IfcColumn\", \"IfcWallStandardCase\", \"IfcFoundation\", \"IfcRoof\"]\n",
     "    all_meshes = []\n",
     "    element_information = {}\n",
     "    ind = 0\n",
+    "    temp_dimension = 5.0\n",
     "    if iterator.initialize():\n",
     "        while True:\n",
     "            shape = iterator.get()\n",
-    "            if shape.type not in exclude_list:\n",
+    "            if shape.type in include_list:\n",
     "                \n",
     "                product = ifc_file.by_guid(shape.guid)\n",
     "\n",
@@ -52,6 +62,12 @@
     "                mesh = o3d.geometry.TriangleMesh()\n",
     "                mesh.vertices = o3d.utility.Vector3dVector(verts)\n",
     "                mesh.triangles = o3d.utility.Vector3iVector(faces.reshape(-1, 3))\n",
+    "\n",
+    "                #find the smallest dimension of the mesh\n",
+    "                min_dimension = min(mesh.get_max_bound() - mesh.get_min_bound())\n",
+    "                if min_dimension > 0.1:\n",
+    "                    if temp_dimension > min_dimension:\n",
+    "                        temp_dimension = round(float(min_dimension),3)\n",
     "                \n",
     "                all_meshes.append(mesh)\n",
     "         \n",
@@ -61,11 +77,11 @@
     "                        \n",
     "            if not iterator.next():\n",
     "                break\n",
-    "            \n",
+    "    print(f'Voxel size: {temp_dimension}')\n",
     "    end_time = time.time()\n",
     "    print(f\"Time taken to convert objects: {end_time - start_time:.4f} seconds\")\n",
     "\n",
-    "    return all_meshes, element_information\n",
+    "    return all_meshes, element_information, temp_dimension\n",
     "\n",
     "def create_uniform_grid(bounds, voxel_size):\n",
     "    \"\"\"Create a uniform grid within the given bounds.\"\"\"\n",
@@ -118,14 +134,14 @@
     "                grid_attributes[i,j,k] = mesh_guid\n",
     "\n",
     "    # assign empty array to the grid\n",
-    "    grid.cell_data['data'] = grid_values.flatten(order='F').astype(bool)\n",
+    "    grid.cell_data['values'] = grid_values.flatten(order='F').astype(bool)\n",
     "    grid.cell_data['attributes'] = grid_attributes.flatten(order='F').astype(str)\n",
     "\n",
     "    end_time = time.time()\n",
     "    print(f\"Time taken to rasterize: {end_time - start_time:.4f} seconds\")\n",
     "    return grid, empty_grid\n",
     "\n",
-    "def get_sampling_points(mesh, voxel_size, points_per_unit_area=100):\n",
+    "def get_sampling_points(mesh, voxel_size, points_per_unit_area=120):\n",
     "    \n",
     "    # Calculate the surface area of the mesh\n",
     "    area = mesh.get_surface_area()\n",
@@ -153,28 +169,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to convert objects: 3.4704 seconds\n",
-      "Total number of polygons across all meshes: 27172\n",
-      "Time taken to create point cloud: 0.6096 seconds\n",
-      "Time taken to rasterize: 16.0951 seconds\n"
+      "Voxel size: 0.124\n",
+      "Time taken to convert objects: 25.1840 seconds\n",
+      "Total number of polygons across all meshes: 20466\n",
+      "Time taken to create point cloud: 4.8814 seconds\n",
+      "Time taken to rasterize: 215.4860 seconds\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f079db5d3384d069d718ae65e2f7784",
+       "model_id": "0dbf37d87b0340c18517cae1bcd18b65",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:54534/index.html?ui=P_0x23e707b1e70_3&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:49953/index.html?ui=P_0x1e4c2600a60_0&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
@@ -183,7 +200,7 @@
    ],
    "source": [
     "### CONVERSION FROM IFC TO MESH ###\n",
-    "all_meshes, element_information = open3d_block_by_element(ifc_file)\n",
+    "all_meshes, element_information, voxel_size = open3d_block_by_element(ifc_file)\n",
     "total_polygons = sum(len(mesh.triangles) for mesh in all_meshes)\n",
     "print(f\"Total number of polygons across all meshes: {total_polygons}\")\n",
     "\n",
@@ -194,7 +211,7 @@
     "xmax, ymax, zmax = bbox.get_max_bound()\n",
     "bounds = np.array([xmin, xmax, ymin, ymax, zmin, zmax])\n",
     "\n",
-    "voxel_size = 0.2\n",
+    "#voxel_size = 0.15\n",
     "\n",
     "### POINT CLOUD CREATION ###\n",
     "start_time = time.time()\n",
@@ -209,25 +226,51 @@
     "\n",
     "### RASTERIZATION ###\n",
     "grid, empty_grid = voxelize_space(bounds, element_information, point_cloud_list, voxel_size)\n",
-    "\n",
-    "### VISUALIZATION ###\n",
-    "p = pv.Plotter()\n",
-    "p.add_mesh(pcd_pv, color=\"blue\", point_size=20.0, render_points_as_spheres=True)\n",
-    "p.add_mesh(empty_grid, opacity=0.3,show_edges=True)\n",
-    "p.add_mesh(grid.extract_cells(grid.cell_data['data']), color=\"red\", opacity=0.6,show_edges=True)\n",
-    "p.show()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71aac0019d584866a0bf314b5d195800",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value=\"<iframe src='http://localhost:49953/index.html?ui=P_0x1e518fd13c0_1&reconnect=auto' style='width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "### VISUALIZATION ###\n",
+    "start_time = time.time()\n",
+    "p = pv.Plotter()\n",
+    "p.add_mesh(pcd_pv, color=\"blue\", point_size=20.0, render_points_as_spheres=True)\n",
+    "p.add_mesh(empty_grid, opacity=0.3,show_edges=False)\n",
+    "p.add_mesh(grid.extract_cells(grid.cell_data['values']), color=\"red\", opacity=0.6,show_edges=False)\n",
+    "p.show()\n",
+    "end_time = time.time()\n",
+    "print(f\"Time taken to visualize: {end_time - start_time:.4f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total concrete volume is 625.6 m3\n"
+      "Total concrete volume is 2.341 m3\n"
      ]
     }
    ],
@@ -241,7 +284,6 @@
     "            concrete_elements.append(element.GlobalId)\n",
     "    return concrete_elements\n",
     "\n",
-    "\n",
     "concrete_elements = fetch_concrete_elements(ifc_file)\n",
     "total_count = 0\n",
     "\n",
@@ -252,10 +294,16 @@
     "    # Count the number of matching cells\n",
     "    total_count += len(matching_cells)\n",
     "    \n",
-    "\n",
-    "print(f'Total concrete volume is {total_count*voxel_size} m3')\n",
-    "\n"
+    "concrete_volume = round(total_count*voxel_size*voxel_size*voxel_size,3)\n",
+    "print(f'Total concrete volume is {concrete_volume} m3')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
