--- a/ifc_polygon-rasterization.ipynb
+++ b/ifc_polygon-rasterization.ipynb
@@ -25,7 +25,7 @@
     "import ifcopenshell.geom\n",
     "import time\n",
     "from functools import reduce\n",
-    "import open3d as o3d\n"
+    "import open3d as o3d"
    ]
   },
   {
@@ -34,13 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Project1.ifc\")\n",
-    "#ifc_file = ifcopenshell.open(r\"IFC Files\\Duplex.ifc\")\n",
-    "ifc_file = ifcopenshell.open(r\"IFC Files\\Clinic.ifc\")\n",
-    "\n",
-    "\n",
     "def open3d_block_by_element(ifc_file): \n",
-    "    start_time = time.time()\n",
     "    settings = ifcopenshell.geom.settings()\n",
     "    settings.set(settings.USE_WORLD_COORDS, True)\n",
     "    settings.set(settings.APPLY_DEFAULT_MATERIALS, True)\n",
@@ -77,9 +71,7 @@
     "                        \n",
     "            if not iterator.next():\n",
     "                break\n",
-    "    print(f'Voxel size: {temp_dimension}')\n",
-    "    end_time = time.time()\n",
-    "    print(f\"Time taken to convert objects: {end_time - start_time:.4f} seconds\")\n",
+    "    \n",
     "\n",
     "    return all_meshes, element_information, temp_dimension\n",
     "\n",
@@ -110,7 +102,6 @@
     "\n",
     "def voxelize_space(bounds, element_information, pcd_list, voxel_size):\n",
     "    \"\"\"Create a 3d grid and check the intersections of the meshes with the grid.\"\"\"\n",
-    "    start_time = time.time()\n",
     "    grid = create_uniform_grid(bounds, voxel_size)\n",
     "    empty_grid = create_uniform_grid(bounds, voxel_size)\n",
     "    \n",
@@ -136,9 +127,7 @@
     "    # assign empty array to the grid\n",
     "    grid.cell_data['values'] = grid_values.flatten(order='F').astype(bool)\n",
     "    grid.cell_data['attributes'] = grid_attributes.flatten(order='F').astype(str)\n",
-    "\n",
-    "    end_time = time.time()\n",
-    "    print(f\"Time taken to rasterize: {end_time - start_time:.4f} seconds\")\n",
+    "    \n",
     "    return grid, empty_grid\n",
     "\n",
     "def get_sampling_points(mesh, voxel_size, points_per_unit_area=120):\n",
@@ -148,61 +137,39 @@
     "\n",
     "    # Calculate the number of points to sample\n",
     "    N = int(area * points_per_unit_area*1/voxel_size)\n",
-    "    #print(f'N: {N} and voxel size: {voxel_size}')\n",
-    "\n",
+    "        \n",
     "    return N\n",
     "\n",
     "def create_point_cloud(all_meshes, voxel_size):\n",
     "    \"\"\"Create a point cloud from a mesh.\"\"\"\n",
     "\n",
     "    pcd_list = []\n",
-    "\n",
+    "    sampling_pts = 0\n",
     "    for mesh in all_meshes:\n",
     "        # Get the number of points to sample based on the mesh size\n",
     "        N = get_sampling_points(mesh, voxel_size)\n",
     "        pcd = mesh.sample_points_uniformly(N)\n",
     "        pcd_pv = open3d_to_pyvista(pcd)\n",
-    "        pcd_list.append(pcd_pv)\n",
-    "\n",
+    "        pcd_list.append(pcd_pv)  \n",
+    "    \n",
     "    return pcd_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Voxel size: 0.124\n",
-      "Time taken to convert objects: 25.1840 seconds\n",
-      "Total number of polygons across all meshes: 20466\n",
-      "Time taken to create point cloud: 4.8814 seconds\n",
-      "Time taken to rasterize: 215.4860 seconds\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dbf37d87b0340c18517cae1bcd18b65",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:49953/index.html?ui=P_0x1e4c2600a60_0&reconnect=auto' style='width…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "file_name = \"03_Clinic.ifc\"\n",
+    "ifc_file = ifcopenshell.open(r\"IFC Files\\03_Clinic.ifc\")\n",
+    "\n",
     "### CONVERSION FROM IFC TO MESH ###\n",
+    "start_time = time.time()\n",
     "all_meshes, element_information, voxel_size = open3d_block_by_element(ifc_file)\n",
+    "end_time = time.time()\n",
+    "conversion_time = end_time - start_time\n",
     "total_polygons = sum(len(mesh.triangles) for mesh in all_meshes)\n",
-    "print(f\"Total number of polygons across all meshes: {total_polygons}\")\n",
     "\n",
     "# combine all meshes into one mesh and find the bounds\n",
     "combined_mesh = reduce(lambda m1, m2: m1 + m2, all_meshes)\n",
@@ -215,62 +182,78 @@
     "\n",
     "### POINT CLOUD CREATION ###\n",
     "start_time = time.time()\n",
-    "point_cloud_list = create_point_cloud(all_meshes, voxel_size)\n",
+    "point_cloud_list  = create_point_cloud(all_meshes, voxel_size)\n",
     "\n",
     "#merge all the list of point clouds into one\n",
     "pcd_pv = pv.PolyData()\n",
     "pcd_pv.points = np.vstack(list(map(lambda x: x.points, point_cloud_list)))\n",
-    "    \n",
+    "sampling_points = len(pcd_pv.points)\n",
     "end_time = time.time()\n",
-    "print(f\"Time taken to create point cloud: {end_time - start_time:.4f} seconds\")\n",
+    "point_cloud_processing = end_time - start_time\n",
+    "print(f'Voxel size: {voxel_size}')\n",
+    "print(f\"Time taken to convert objects: {conversion_time:.4f} seconds\")\n",
+    "print(f'Total number of points: {sampling_points}')\n",
+    "print(f\"Time taken to create point cloud: {point_cloud_processing:.4f} seconds\")\n",
+    "print(f\"Total number of polygons across all meshes: {total_polygons}\")\n",
     "\n",
     "### RASTERIZATION ###\n",
+    "start_time = time.time()\n",
     "grid, empty_grid = voxelize_space(bounds, element_information, point_cloud_list, voxel_size)\n",
-    "\n"
+    "end_time = time.time()\n",
+    "rasterization_time = end_time - start_time\n",
+    "print(f\"Time taken to rasterize: {rasterization_time:.4f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71aac0019d584866a0bf314b5d195800",
+       "model_id": "ffdd66f526e14eaebd7b3694b843036e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:49953/index.html?ui=P_0x1e518fd13c0_1&reconnect=auto' style='width…"
+       "Widget(value=\"<iframe src='http://localhost:51971/index.html?ui=P_0x1fbfdcabd30_3&reconnect=auto' style='width…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to visualize: 2.8250 seconds\n"
+     ]
     }
    ],
    "source": [
     "### VISUALIZATION ###\n",
     "start_time = time.time()\n",
     "p = pv.Plotter()\n",
-    "p.add_mesh(pcd_pv, color=\"blue\", point_size=20.0, render_points_as_spheres=True)\n",
+    "p.add_mesh(pcd_pv, color=\"blue\", point_size=10.0, render_points_as_spheres=True)\n",
     "p.add_mesh(empty_grid, opacity=0.3,show_edges=False)\n",
     "p.add_mesh(grid.extract_cells(grid.cell_data['values']), color=\"red\", opacity=0.6,show_edges=False)\n",
     "p.show()\n",
     "end_time = time.time()\n",
-    "print(f\"Time taken to visualize: {end_time - start_time:.4f} seconds\")"
+    "visualization_time = end_time - start_time\n",
+    "print(f\"Time taken to visualize: {visualization_time:.4f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total concrete volume is 2.341 m3\n"
+      "Total concrete volume is 20.683 m3\n"
      ]
     }
    ],
@@ -303,7 +286,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "results = {}  # Dictionary to store the results for each IFC file\n",
+    "\n",
+    "# Store the results in the dictionary\n",
+    "results['File'] = file_name\n",
+    "results['Conversion Time'] = conversion_time\n",
+    "results['Total Polygons'] = total_polygons\n",
+    "results['Voxel Size'] = voxel_size\n",
+    "results['Total Points'] = sampling_points\n",
+    "results['Point Cloud Creation Time'] = point_cloud_processing\n",
+    "results['Rasterization Time'] = rasterization_time\n",
+    "results['Visualization Time'] = visualization_time\n",
+    "results['Concrete Volume'] = concrete_volume\n",
+    "\n",
+    "df = pd.DataFrame([results])\n",
+    "\n",
+    "df.to_excel(\"performance_results.xlsx\", index=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
